// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TierCard renders correctly with column view 1`] = `
<TierCard__Wrapper
  className=" column"
>
  <TierCard__Announcement
    color="white"
    size="18px"
    uppercase={true}
    weight={500}
  >
    <FormattedMessage
      defaultMessage="Get Free Crypto"
      id="components.identityverification.tiercard.getfreecrypto"
      values={Object {}}
    />
  </TierCard__Announcement>
  <TierCard__Container>
    <TierCard__Header
      color="marketing-primary"
      uppercase={true}
    >
      <FormattedMessage
        defaultMessage="Tier {tier} Verification"
        id="components.identityverification.tiercard.tierheader"
        values={
          Object {
            "tier": 2,
          }
        }
      />
    </TierCard__Header>
    <TierCard__Content>
      <TierCard__Row>
        <TierCard__Column>
          <Text
            altFont={false}
            capitalize={false}
            color="marketing-secondary"
            cursor="inherit"
            italic={false}
            opacity={1}
            size="32px"
            uppercase={false}
            weight={400}
          >
            $25,000
          </Text>
          <Text
            altFont={false}
            capitalize={false}
            color="textBlack"
            cursor="inherit"
            italic={false}
            opacity={1}
            size="14px"
            style={
              Object {
                "marginTop": "8px",
              }
            }
            uppercase={false}
            weight={400}
          >
            <Text
              altFont={false}
              capitalize={false}
              color="gray-5"
              cursor="inherit"
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Daily Swap Limit"
                id="components.identityverification.tiercard.dailylimit"
                values={Object {}}
              />
            </Text>
          </Text>
          <Text
            altFont={false}
            capitalize={false}
            color="gray-3"
            cursor="inherit"
            italic={false}
            opacity={1}
            size="14px"
            style={
              Object {
                "marginTop": "7px",
              }
            }
            uppercase={false}
            weight={400}
          >
            <FormattedMessage
              defaultMessage="Takes {time} min"
              id="components.identityverification.tiercard.timing"
              values={
                Object {
                  "time": "10",
                }
              }
            />
          </Text>
        </TierCard__Column>
        <TierCard__Column>
          <TextGroup
            inline={true}
            key="0"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="gray-3"
              cursor="inherit"
              italic={false}
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Tier 1+"
                id="components.identityverification.tiercard.tier1"
                values={Object {}}
              />
            </Text>
          </TextGroup>
          <TextGroup
            inline={true}
            key="1"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="gray-5"
              cursor="inherit"
              italic={false}
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Verified Phone"
                id="components.identityverification.tiercard.phone"
                values={Object {}}
              />
            </Text>
          </TextGroup>
          <TextGroup
            inline={true}
            key="2"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="gray-5"
              cursor="inherit"
              italic={false}
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Gov't Issued ID"
                id="components.identityverification.tiercard.id"
                values={Object {}}
              />
            </Text>
            <Icon
              color="success"
              cursor={false}
              name="check"
              size="12px"
              style={
                Object {
                  "marginLeft": "5px",
                }
              }
              weight={400}
            />
          </TextGroup>
          <TextGroup
            inline={true}
            key="3"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="gray-5"
              cursor="inherit"
              italic={false}
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Selfie"
                id="components.identityverification.tiercard.selfie"
                values={Object {}}
              />
            </Text>
            <Icon
              color="success"
              cursor={false}
              name="check"
              size="12px"
              style={
                Object {
                  "marginLeft": "5px",
                }
              }
              weight={400}
            />
          </TextGroup>
        </TierCard__Column>
      </TierCard__Row>
    </TierCard__Content>
    <TierCard__ActionButton
      fullwidth={true}
      jumbo={true}
      nature="primary"
    >
      <FormattedMessage
        defaultMessage="Get Started"
        id="components.identityverification.tiercard.getstarted"
        values={Object {}}
      />
    </TierCard__ActionButton>
  </TierCard__Container>
</TierCard__Wrapper>
`;

exports[`TierCard renders null w/o showBanner 1`] = `
<TierCard__Wrapper
  className=""
>
  <TierCard__Container>
    <TierCard__Header
      color="marketing-primary"
      uppercase={true}
    >
      <FormattedMessage
        defaultMessage="Tier {tier} Verification"
        id="components.identityverification.tiercard.tierheader"
        values={
          Object {
            "tier": 1,
          }
        }
      />
    </TierCard__Header>
    <TierCard__Content>
      <TierCard__Row>
        <TierCard__Column>
          <Text
            altFont={false}
            capitalize={false}
            color="marketing-secondary"
            cursor="inherit"
            italic={false}
            opacity={1}
            size="32px"
            uppercase={false}
            weight={400}
          >
            $1,000
          </Text>
          <Text
            altFont={false}
            capitalize={false}
            color="textBlack"
            cursor="inherit"
            italic={false}
            opacity={1}
            size="14px"
            style={
              Object {
                "marginTop": "8px",
              }
            }
            uppercase={false}
            weight={400}
          >
            <Text
              altFont={false}
              capitalize={false}
              color="gray-5"
              cursor="inherit"
              italic={false}
              opacity={1}
              size="14px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Annual Swap Limit"
                id="components.identityverification.tiercard.annuallimit"
                values={Object {}}
              />
            </Text>
          </Text>
          <Text
            altFont={false}
            capitalize={false}
            color="gray-3"
            cursor="inherit"
            italic={false}
            opacity={1}
            size="14px"
            style={
              Object {
                "marginTop": "7px",
              }
            }
            uppercase={false}
            weight={400}
          >
            <FormattedMessage
              defaultMessage="Takes {time} min"
              id="components.identityverification.tiercard.timing"
              values={
                Object {
                  "time": "3",
                }
              }
            />
          </Text>
        </TierCard__Column>
        <TierCard__Column>
          <TextGroup
            inline={true}
            key="0"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="gray-5"
              cursor="inherit"
              italic={false}
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Verified Email"
                id="components.identityverification.tiercard.email"
                values={Object {}}
              />
            </Text>
          </TextGroup>
          <TextGroup
            inline={true}
            key="1"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="gray-5"
              cursor="inherit"
              italic={false}
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Name"
                id="components.identityverification.tiercard.name"
                values={Object {}}
              />
            </Text>
          </TextGroup>
          <TextGroup
            inline={true}
            key="2"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="gray-5"
              cursor="inherit"
              italic={false}
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Date of Birth"
                id="components.identityverification.tiercard.dob"
                values={Object {}}
              />
            </Text>
          </TextGroup>
          <TextGroup
            inline={true}
            key="3"
            nowrap={false}
            style={
              Object {
                "marginBottom": "8px",
              }
            }
          >
            <Text
              altFont={false}
              capitalize={false}
              color="gray-5"
              cursor="inherit"
              italic={false}
              opacity={1}
              size="12px"
              uppercase={false}
              weight={400}
            >
              <FormattedMessage
                defaultMessage="Address"
                id="components.identityverification.tiercard.address"
                values={Object {}}
              />
            </Text>
          </TextGroup>
        </TierCard__Column>
      </TierCard__Row>
    </TierCard__Content>
    <TierCard__ActionButton
      fullwidth={true}
      jumbo={true}
      nature="primary"
    >
      <FormattedMessage
        defaultMessage="Get Started"
        id="components.identityverification.tiercard.getstarted"
        values={Object {}}
      />
    </TierCard__ActionButton>
  </TierCard__Container>
</TierCard__Wrapper>
`;
